--- a/1-two-sum/Cargo.toml
+++ b/1-two-sum/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "two-sum"
 version = "0.1.0"
-authors = ["Guangzhi Xu <xuguangzhi@kingsoft.com>"]
+authors = ["Garry Xu <garry.x@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
